# apex

./: .clang-tidy  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  feature-request.md
.github/workflows/: build.yml  docs.yml  tests.yml
cmake/: FindSphinx.cmake
docs/: concepts.rst  cpo.rst  index.rst  mixins.rst  monads.rst  prelude.rst
include/apex/: array.hpp  bit.hpp  concurrency.hpp  detect.hpp  functional.hpp  iterable.hpp  iterator.hpp  macros.hpp  memory.hpp  mixin.hpp  optional.hpp  outcome.hpp  scope.hpp  span.hpp  target.hpp  traits.hpp  types.hpp  utility.hpp
include/apex/check/: alias.hpp  iterable.hpp
include/apex/concepts/: callable.hpp  comparison.hpp  core.hpp  object.hpp
include/apex/concurrency/: spin.hpp  synchronized.hpp
include/apex/container/: array.hpp  string.hpp
include/apex/core/: array.hpp  bit.hpp  charconv.hpp  concepts.hpp  coroutine.hpp  dispatch.hpp  either.hpp  exception.hpp  functional.hpp  iterable.hpp  iterator.hpp  macros.hpp  memory.hpp  meta.hpp  optional.hpp  outcome.hpp  prelude.hpp  scope.hpp  source.hpp  span.hpp  string.hpp  traits.hpp  types.hpp  utility.hpp
include/apex/detail/core/: either.hpp  optional.hpp
include/apex/detail/prelude/: begin.hpp  common-reference.hpp  concepts.hpp  convertible-to.hpp  decay-copy.hpp  detected.hpp  enable.hpp  end.hpp  iterator.hpp  macros.hpp  reference.hpp  remove-cvref.hpp  swap.hpp  traits.hpp  trivial.hpp  types.hpp  xvalue-of.hpp
include/apex/detect/: iter.hpp  operators.hpp  types.hpp
include/apex/iter/: advance.hpp  concepts.hpp  distance-to.hpp  equal-to.hpp  next.hpp  prev.hpp  read-from.hpp  traits.hpp  write-into.hpp
include/apex/journal/: print.hpp  priority.hpp
include/apex/memory/: offset.hpp  out.hpp  retain.hpp  std.hpp  view.hpp
include/apex/mixin/: handle.hpp  iterable.hpp  iterator.hpp  resource.hpp  singleton.hpp
include/apex/os/: session.hpp
include/apex/proxy/: arrow.hpp  item.hpp
include/apex/runtime/: session.hpp
include/apex/session/: arguments.hpp  environment.hpp
include/apex/sqlite/: backup.hpp  blob.hpp  column.hpp  connection.hpp  context.hpp  error.hpp  memory.hpp  row.hpp  statement.hpp  table.hpp  transaction.hpp  value.hpp
include/apex/sync/: spin.hpp  synchronized.hpp
src/: span.cxx
src/core/: exception.cxx  optional.cxx  span.cxx
src/os/: session.cxx
src/runtime/: session.cxx
src/session/: arguments.cxx
src/sqlite/: backup.cxx  column.cxx  connection.cxx  statement.cxx  transaction.cxx  value.cxx
tests/core/: array.cxx  bit.cxx  coroutine.cxx  dispatch.cxx  either.cxx  functional.cxx  iterator.cxx  optional.cxx  prelude.cxx  scope.cxx  source.cxx  string.cxx  utility.cxx
tests/detail/: begin.cxx  concepts.cxx  detected.cxx  end.cxx  reference.cxx  swap.cxx
tests/memory/: view.cxx
tests/mixin/: singleton.cxx
tests/proxy/: arrow.cxx
